README.md completed, added environments.yml, adjusted code order for functions

--- a/speedruns.ipynb
+++ b/speedruns.ipynb
@@ -98,22 +98,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8a66270-643b-4d8a-a1cd-d3c1bd30f32b",
+   "metadata": {},
+   "source": [
+    "### Defining Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "164af338-4910-42c8-b98c-cf8632b7a053",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "#### Grabbing the Game ID"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "03f040bc-85c0-4450-ba63-0f8adb2513a3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'nd28z0ed'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_game_id(game_name):\n",
     "    response = requests.get(f'{base_url}/games?name={game_name}')\n",
@@ -121,17 +128,7 @@
     "    if response.status_code == 200:\n",
     "        return data['data'][0]['id']\n",
     "    else:\n",
-    "        return None\n",
-    "\n",
-    "get_game_id(game_name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8a66270-643b-4d8a-a1cd-d3c1bd30f32b",
-   "metadata": {},
-   "source": [
-    "### Defining Functions"
+    "        return None"
    ]
   },
   {
